[package]
name = "rust_os"
version = "0.1.0"
authors = ["Alex Markin <alexndr86@gmail.com>"]
edition = "2018"

# The profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# The profile used for `cargo build --release`
[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.3"
